# Darwin

./: .gitignore  Atypes.py  README.md  TODO.md  application.py  auto_grader.py  bad_config_exception.py  config.py  eclipse.py  installer.py  main.py  pyproject.toml  requirements.txt  run_test.sh  sample.env  test.py  workspace_grep.sh
archive/: auto_grader.py  csv_storage.py
backend/: db_init.py
backend/dal/: account.py  assignment.py  course.py  submission.py  teacher.py
clients/: client_I.py  student_filterer.py
clients/moodle/: moodle_client.py  moodle_parser.py
frontend/src/pages/: index.tsx
midtier/: application.py  utils.py
midtier/clients/: student_filterer.py
models/: backend_models.py
scripts/: deploy.sh  dev.sh  get_course_rest.py  get_courses.sh  run.sh
src/: Atypes.py  auto_grader.py  installer.py  maven_project.py  maven_project_validator.py  moodle_client.py  store_grade_to_file.py
src/darwin/: __init__.py  config.py
storage/: csv_storage.py  storage_I.py  text_storage.py
storage/sqlite/: db_init.py  sqlite_storage.py
storage/sqlite/dal/: ta.py  (+5 more)
test/: test.py
test/backend/: account.py  assignment.py  resource_permission.py
test/midtier/: assignment.py
test/misc/: send_email.py
validators_and_executors/: README.md  project_I.py  project_execution_exception.py  project_validation_exception.py  project_validator_I.py  test_result.py  test_result_context.py
validators_and_executors/eclipsemaven/: dot_classpath.py  dot_project.py  dot_settings.py  pom.py  project_description_I.py  project_impl.py  project_validator_Impl.py
(+59 files in other folders)
